src/css/off-screen-menu.css
.off-screen-menu {
  position: fixed;
  top: 0;
  left: 0;
  z-index: 999;

  width: 100%;
  height: 100%;
  background-color: #fff;

  opacity: 0;
  visibility: hidden;
  pointer-events: none;

  transition: opacity 250ms cubic-bezier(0.17, 0.67, 0.83, 0.67),
    visibility 250ms cubic-bezier(0.17, 0.67, 0.83, 0.67);
}

.off-screen-menu.is-open {
  opacity: 1;
  visibility: visible;
  pointer-events: auto;
}

.off-screen-menu .container {
  height: 100%;
  padding: 16px 20px 24px;

  display: flex;
  flex-direction: column;
}

.off-screen-menu-logo {
  display: inline-block;
  color: #000;
}

.off-screen-menu-logo-icon {
  display: block;
  fill: currentColor;
  width: 160px;
  height: 68px;
}

.off-screen-menu-nav {
  margin-top: 24px;
  margin-bottom: 64px;
}

.off-screen-menu-list {
  display: flex;
  flex-direction: column;
  gap: 24px;
}

.off-screen-menu-link {
  display: block;

  font-family: "Mulish", sans-serif;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;

  color: #000;
  text-decoration: none;
}

.off-screen-menu-order {
  display: block;
  width: 100%;

  text-align: center;
}

